# MCPOpenAIIntegration

./: README.md
mcp-client/: client.py  client_sse.py  pyproject.toml
mcp-server/: README.md  pyproject.toml
mcp-server/src/mcp_server/: server.py
